What needs to be done to complete project